@@ -4,8 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'ca.cutterslade.gradle:gradle-dependency-analyze:1.2.0'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
     }
 }
 
@@ -17,13 +16,14 @@ plugins {
     id "com.dorongold.task-tree" version "1.3" apply true
 
     id "com.github.johnrengelman.shadow" version "2.0.4" apply false
+
+    id 'nu.studer.jooq' version '2.0.9' apply false
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '4.7'
+    gradleVersion = '4.9'
 }
 
-apply plugin: 'ca.cutterslade.analyze'
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'de.undercouch.download'
 
@@ -67,14 +67,17 @@ ext.versions = [
 
         //------------3rd-party------------
         curator           : '2.12.0', //must be chosen to be compatible with the ZK version in CDH 5.10
-        dropwizard        : '1.2.2', //if you change this version you should check the versions below that need to move in sync with it
-        dropwizard_metrics: '3.2.5', //should be kept in step with dropwizard
-        guava             : '21.0',
+        dropwizard        : '1.3.5', //if you change this version you should check the versions below that need to move in sync with it
+        dropwizard_metrics: '4.0.2', //should be kept in step with dropwizard
+        guava             : '26.0-jre',
         gwt               : '2.8.2',
         hibernate         : '5.2.13.Final', //dropwiz 1.2.5 uses -validator 5.4.2.Final and -core 5.2.12.Final
+        hikari            : '3.2.0',
         jackson           : '2.9.1', //in line with dropwizard 1.2.2
         jersey            : '2.25.1',
         jetty             : '9.4.8.v20171121', //in line with dropwizard 1.2.2
+        jooq              : '3.10.1',
+        junit_jupiter     : '5.2.0',
         logback           : '1.2.3', //in line with dropwizard 1.2.2
         lucene            : '5.5.3',
         rxjava            : '2.1.10',
@@ -101,7 +104,7 @@ ext.libs = [
 
         //------3rd Party-libs---------------
         aopalliance                    : "aopalliance:aopalliance:1.0",
-        assertj_core                   : "org.assertj:assertj-core:3.8.0",
+        assertj_core                   : "org.assertj:assertj-core:3.10.0",
         c3p0                           : "com.mchange:c3p0:0.9.5.2",
         commons_codec                  : "commons-codec:commons-codec:1.11",
         commons_compress               : "org.apache.commons:commons-compress:1.12",
@@ -125,9 +128,9 @@ ext.libs = [
         dropwizard_testing             : "io.dropwizard:dropwizard-testing:$versions.dropwizard",
         dropwizard_configuration       : "io.dropwizard:dropwizard-configuration:$versions.dropwizard",
         fast_classpath_scanner         : "io.github.lukehutch:fast-classpath-scanner:2.9.4",
-        flyway_core                    : "org.flywaydb:flyway-core:4.0.3",
-        google_findbugs                : "com.google.code.findbugs:jsr305:3.0.2",
+        flyway_core                    : "org.flywaydb:flyway-core:5.1.3",
         gin                            : "com.google.gwt.inject:gin:2.1.2",
+        google_findbugs                : "com.google.code.findbugs:jsr305:3.0.2",
         guava                          : "com.google.guava:guava:$versions.guava", //>=v21 removes MoreExecutors.sameThreadExecutor() which is needed by curator 2.11
         guice4                         : "com.google.inject:guice:4.2.0",
         guice3                         : "com.google.inject:guice:3.0",
@@ -138,11 +141,12 @@ ext.libs = [
         gwtp_mvp_client                : "com.gwtplatform:gwtp-mvp-client:0.7",
         hamcrest_core                  : "org.hamcrest:hamcrest-core:1.3",
         hbase                          : "org.apache.hbase:hbase-common:1.2.1", //should be set to be consistent with CDH version
-        hessian                        : "com.caucho:hessian:4.0.38",
+        hessian                        : "com.caucho:hessian:4.0.51",
         hibernate_core                 : "org.hibernate:hibernate-core:$versions.hibernate" /* LATEST 5.2.13.Final */,
         hibernate_entitymanager        : "org.hibernate:hibernate-entitymanager:$versions.hibernate" /* LATEST 5.2.5.Final */,
         hibernate_jpa_api              : "org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final",
         hibernate_validator            : "org.hibernate:hibernate-validator:5.3.4.Final",
+        hikari                         : "com.zaxxer:HikariCP:$versions.hikari",
         hsqldb                         : "org.hsqldb:hsqldb:2.3.4",
         jBCrypt                        : "de.svenkubiak:jBCrypt:0.4.1",
         jackson_annotations            : "com.fasterxml.jackson.core:jackson-annotations:$versions.jackson",
@@ -150,6 +154,8 @@ ext.libs = [
         jackson_databind               : "com.fasterxml.jackson.core:jackson-databind:$versions.jackson", //was 2.8.5, now 2.8.6
         java_jwt                       : "com.auth0:java-jwt:3.1.0",
         javassist                      : "org.javassist:javassist:3.18.1-GA",
+        javax_activation               : "javax.activation:javax.activation-api:1.2.0",
+        javax_annotation               : "javax.annotation:javax.annotation-api:1.3.2",
         javax_el                       : "org.glassfish:javax.el:3.0.1-b08",
         javax_el_api                   : "javax.el:javax.el-api:3.0.0",
         javax_inject                   : "javax.inject:javax.inject:1",
@@ -157,6 +163,7 @@ ext.libs = [
         javax_servlet_api              : "javax.servlet:javax.servlet-api:3.1.0",
         javax_validation               : 'javax.validation:validation-api:1.1.0.Final',
         jaxb_api                       : "javax.xml.bind:jaxb-api:2.3.0",
+        jaxb_runtime                   : "org.glassfish.jaxb:jaxb-runtime:2.3.0.1",
         jcl_over_slf4j                 : "org.slf4j:jcl-over-slf4j:$versions.slf4j",
         jcommander                     : 'com.beust:jcommander:1.72',
         jersey_client                  : "org.glassfish.jersey.core:jersey-client:$versions.jersey",
@@ -166,10 +173,14 @@ ext.libs = [
         jetty_server                   : "org.eclipse.jetty:jetty-server:$versions.jetty",
         jetty_servlet                  : "org.eclipse.jetty:jetty-servlet:$versions.jetty",
         jetty_servlets                 : "org.eclipse.jetty:jetty-servlets:$versions.jetty",
+        jooq                           : "org.jooq:jooq:$versions.jooq",
+        jooq_codegen                   : "org.jooq:jooq-codegen:$versions.jooq",
+        jooq_meta                      : "org.jooq:jooq-meta:$versions.jooq",
         jose4j                         : "org.bitbucket.b_c:jose4j:0.5.5",
         jsinterop_annotations          : "com.google.jsinterop:jsinterop-annotations:1.0.1",
         jul_to_slf4j                   : "org.slf4j:jul-to-slf4j:$versions.slf4j",
         junit                          : "junit:junit:4.12",
+        junit_jupiter                  : "org.junit.jupiter:junit-jupiter-api:$versions.junit_jupiter",
         log4j_over_slf4j               : "org.slf4j:log4j-over-slf4j:$versions.slf4j",
         logback_classic                : "ch.qos.logback:logback-classic:$versions.logback",
         logback_core                   : "ch.qos.logback:logback-core:$versions.logback",
@@ -177,7 +188,7 @@ ext.libs = [
         lucene_core                    : "org.apache.lucene:lucene-core:$versions.lucene",
         lucene_queryparser             : "org.apache.lucene:lucene-queryparser:$versions.lucene",
         lucene_backward_codecs: "org.apache.lucene:lucene-backward-codecs:$versions.lucene",
-        mockito_core                   : "org.mockito:mockito-core:2.0.2-beta",
+        mockito_core                   : "org.mockito:mockito-core:2.21.0",
         mysql_connector_java           : "mysql:mysql-connector-java:5.1.40",
         poi                            : "org.apache.poi:poi:3.17",
         poi_ooxml                      : "org.apache.poi:poi-ooxml:3.17",
@@ -226,10 +237,10 @@ def projectsWithSharedTestJars = subprojects.findAll { project ->
     project.path in [
             ':stroom-core-server',
             ':stroom-pipeline',
-            ':stroom-dashboard-server',
+            ':stroom-dashboard:stroom-dashboard-server',
             ':stroom-entity-shared',
-            ':stroom-index-server',
-            ':stroom-security-server',
+            ':stroom-index:stroom-index-server',
+            ':stroom-security:stroom-security-server',
             ':stroom-util',
             'zzDUMMYzz to ease sorting'
     ]
@@ -243,6 +254,7 @@ allprojects {
     // Make doclint be quiet - we don't care about JavaDoc warnings.
     tasks.withType(Javadoc) {
         options.addStringOption('Xdoclint:none', '-quiet')
+        options.addBooleanOption('html5', true)
     }
 }
 
@@ -251,11 +263,10 @@ subprojects {
     //println "Configuring subproject ${project.path}"
 
     apply plugin: 'java'
-    apply plugin: 'ca.cutterslade.analyze' //analyze missing dependencies for the code base
     apply plugin: 'idea'
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    sourceCompatibility = JavaVersion.VERSION_1_10
+    targetCompatibility = JavaVersion.VERSION_1_10
 
     sourceSets {
         // This lets us use different directories for our integration tests.
@@ -371,7 +382,7 @@ subprojects {
     }
 
     clean {
-        //clear out the 'out' dirs used by intelliJ
+        // clear out the 'out' dirs used by intelliJ
         delete "out"
     }
 
@@ -381,10 +392,15 @@ subprojects {
 
 
 
-
-
-
-
+//    // Add support for JAXB binding in J9 modules.
+//    tasks.withType(AbstractCompile) {
+//        options.compilerArgs += ["--add-modules", "java.xml.bind,java.xml.ws.annotation"]
+//    }
+//
+//    tasks.withType(Test) {
+//        jvmArgs += ["--add-modules", "java.xml.bind,java.xml.ws.annotation"]
+//    }
+//
 
 
 
